<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/tape"
        android:id="@+id/imageLogin"
        />


    <LinearLayout
        android:layout_below="@id/imageLogin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
    <EditText
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/UsernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColorHint="@color/gray"
        android:background="@drawable/txt_shape"
        android:layout_marginBottom="16dp"
        android:singleLine="true"
        android:hint="@string/username"/>

    <EditText
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/PasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:layout_centerInParent="true"
        android:background="@drawable/txt_shape"

        android:inputType="textPassword"
        android:layout_below="@+id/UsernameInput"
        android:singleLine="true"
        android:hint="Password"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:layout_below="@+id/PasswordInput">
    <Button
        android:background="@drawable/btn_unpress"
        android:id="@+id/SigninBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_below="@+id/PasswordInput"
        android:text="@string/login"/>
    <Button
        android:id="@+id/RegistrBtn"
        android:background="@drawable/btn_unpress"
        android:layout_width="match_parent"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordInput"
        android:text="@string/signup"
        />
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
